# plantFEM

./: .condition  .gitignore  .man_SiCroF  .man_plantFEM  .mini.stl  .pf_profile  .server.f90.swp  .shake.database  .~lock.1D_seismic.ods#  .~lock.Me.csv#  .~lock.RHS2.csv#  .~lock.filename2.csv#  .~lock.twodata.csv#  .~lock.zero_cross.csv#  CMakeLists.txt  Dockerfile  GUI_Installer.py  GetPixcelByRGB_pid_0.py  GetPixcelByRGB_pid_1.py  GetPixcelByRGB_pid_1.txt  GetPixcelByRGB_size_pid_0.txt  GetPixcelSize_pid_0.py  GetPixcelSize_pid_0.txt  GetPixcelSize_pid_1.py  GetPixcelSize_pid_1.txt  GetSurface_pid_0.txt  GetSurface_pid_1.txt  LICENSE  Makefile  README.md  SetUp.ipynb  SiCroF.py  Soil  TSP_enum_greedy_roop.out  __init__.py  a.out  apt.txt  arrayclass.mod  arrayoperationclass.mod  bicgstab.cu  (+97 more)
.circleci/: config.yml
.github/workflows/: blank.yml
.ipynb_checkpoints/: Preprocessing-checkpoint.ipynb  RunMultiProblem-checkpoint.ipynb  Untitled-checkpoint.ipynb
Interactive/: GUI.py  HTTPServer.py  SiCroF  SiCroF.bat  SiCroF.py  SiCroF_gfortran  SiCroF_macOS  SiCroF_run  SiCroF_run_macOS  exec_plantfem.bat  exec_plantfem_gfortran  exec_plantfem_run_macOS  plantfem  plantfem_run  plantfem_run_macOS
Interactive/blenderAddon/: blSiCroF.py  blSiCroFAddObject.py  blSiCroFexport.py  blSiCroFinstall.py
Interactive/ipynb/: Preprocessing.ipynb  RunMultiProblem.ipynb  RunSingleProblem.ipynb  SetUp.ipynb
RESULTS/: DomainList.txt  GetSurface_pid_0.geo  GetSurface_pid_0.inp  GetSurface_pid_0.mesh  contact.scf  seed.geo  untitled.stlcreateMesh_seed.geo
Tutorial/: call_from_python.py  createSoybean.py  result_FE_v001999_1kHz.txt
Tutorial/CreateInputFiles/: example.f90
Tutorial/CreateSoybean/: SoybeanField.f90  WaterAbsorption.f90  loadSeed.f90  realShapeSeed.f90  seed.f90  soybean.f90
Tutorial/DiffusionBar/: Domainlist.txt
Tutorial/Example/: Geometry.f90  createTable.f90
Tutorial/InputData/: Domainlist.txt  grass_leaf.scf  test.scf
Tutorial/InputDataPackage/: IfaceList.txt  contact.scf  finitedtest2.scf
Tutorial/MPI/: DoItByMPI.f90
Tutorial/Preprocess_samples/: Prepro.f90  pp.f90  pp_deform.f90  test3.f90  test6.f90  test7.f90  tutorial.f90
Tutorial/PyAPISample/: API_interactive_example.py  DomainList.txt
Tutorial/RSAencryption/: RSAencryption.f90
Tutorial/RouteOptimization/: AddressList.txt  RouteOpt1.f90  RouteOpt_InitialRoute.csv  RouteOpt_InitialRoute.txt  RouteOpt_OptimalRoute.csv  RouteOpt_OptimalRoute.txt  coord1.txt
Tutorial/WaterAbsorption/: Desktop  Home  ImportData.f90  createData.f90  ex2.f90  ex3.f90  ex4.f90  ex5.f90  ex5_para.f90  ex7.f90
Tutorial/app/: createSoybeanWebServer.f90  send.json  soybeanfield.f90  untitled.f90  webserver.py
Tutorial/fem/: 3DOF_sim.f90  BinaryTreeSearchFiniteElements.f90  BridgePierGravity.f90  CRS_Zero_Matrix.f90  DomainComposition.f90  EbOM_example_mech.f90  EbOM_example_mech_3bars.f90  EbOM_example_mech_with_stress_contor.f90  EbOM_example_mech_with_stress_tensor.f90  FEMSolver_PoissonMatrix.f90  HowToAssembleFEMMatrix.f90  LOBPCG_dense_sample.f90  LOBPCG_sparse_example.f90  MPI_BiCGSTAB_example.f90  MPI_Matmul_test.f90  MPI_dot_product.f90  MPI_dot_product_test1.f90  M_inverse_K_matrix.f90  Matrices.f90  ModalAnalysis.f90  ModalAnalysis_FixBoundary.f90  ModalAnalysis_LAPACK.f90  ModalAnalysis_cube.f90  ModalAnalysis_myLOBPCG_with_bugs.f90  MotionEquation_ExpInteg.f90  NodeAndElement.f90  PointJacobiPreconditioning_for_EbOM.f90  SDOF.f90  SDOF_and_FFT.f90  SimpleDeformation.f90  (+57 more)
addon/: addon_example.f90
doc/: ArrayOperationClass.md  ArrayOperationClass.txt  BlenderAddon.md  BoundaryConditionClass.md  BoundaryConditionClass.txt  ConstitutiveModelClass.md  ConstitutiveModelClass.txt  ContactMechanicsClass.md  ContactMechanicsClass.txt  ControlParameterClass.md  ControlParameterClass.txt  DictionaryClass.txt  DiffusionEquationClass.md  DiffusionEquationClass.txt  FEMDomainClass.md  FEMDomainClass.txt  FEMIfaceClass.md  FEMIfaceClass.txt  FieldClass.md  FieldClass.txt  FiniteDeformationClass.md  FiniteDeformationClass.txt  GeometryClass.txt  InputFileFormat.md  LinearSolverClass.md  LinearSolverClass.txt  MPIClass.md  MPIClass.txt  MainClass.md  MaterialPropClass.md  MaterialPropClass.txt  MathClass.md  MathClass.txt  MeshOperationClass.md  MeshOperationClass.txt  MultiDiffDeformClass.md  MultiDiffDeformClass.txt  MultiPhysicsClass.md  MultiPhysicsClass.txt  OpenMPClass.md  (+27 more)
docker/: Dockerfile  build  buildSiCroF.bat  docker-compose.yml  dockerfile_bk  run.bat  start-vncserver.sh  startFortran.bat
etc/: hostfile  version
inc/: .inclist  airclass.mod  analystclass.mod  arabidopsisclass.mod  arrayclass.mod  arrayoperationclass.mod  boringclass.mod  boundaryconditionclass.mod  civilitemclass.mod  consoleclass.mod  constitutivemodelclass.mod  contactdiffusionclass.mod  contactmechanicsclass.mod  controlparaeterclass.mod  controlparameterclass.mod  csvclass.mod  damclass.mod  dictionaryclass.mod  diffusionequationclass.mod  digitalelevationmodelclass.mod  earclass.mod  earthclass.mod  elasticityclass.mod  elastoplasticityclass.mod  environmentclass.mod  equationclass.mod  factoryclass.mod  farmclass.mod  fem.mod  femdomainclass.mod  femifaceclass.mod  femsolverclass.mod  fertilizerclass.mod  fieldclass.mod  finitedeformationclass.mod  flowerclass.mod  gaclass.mod  geometryclass.mod  grapeclass.mod  graphclass.mod  (+78 more)
install/: CMakeCache.txt  CMakeLists.txt  Makefile  auto_test.py  cmake_install.cmake  install  install.bat  install_all  install_all_cl  install_fem  install_ifort  install_macOS  install_obj  install_sim  install_std  install_std_cl  install_without_MPI  module_list.txt
install/docker/: Dockerfile  devcontainer.json  init-container.sh  xstartup
ipynb/: RunSingleProblem.ipynb
log/: LsystemClass.f90  log.ods  log.txt  log_prepro_1.f90  log_prepro_2.f90  log_solver.f90  prepro.f90  sample.f90  soybean.f90  test.f90
logs/: update_2021_04_27.txt
result_soydeform/: server.f90  soy.json  soyleaf.json  soystem.json
setup/: setup  setup.py  setup_CentOS  setup_macOS
src/: .shake.database
(+2877 files in other folders)
